test/negative/InterfaceInheritIdenticalSignatures/B.java
package B;
public interface B {
    public int x(); // TODO: is public required here?
}
